fix overflowing text

--- a/components/card/style/card.module.css
+++ b/components/card/style/card.module.css
@@ -13,7 +13,7 @@
 }
 @media only screen and (max-width: 576px) {
   .root {
-    height: 120px;
+    height: 120px !important;
     width: 100%;
     margin: 0;
     margin-top: 14px;
