--- a/src/Container/News/style/news.module.css
+++ b/src/Container/News/style/news.module.css
@@ -90,7 +90,8 @@
   }
   .img_cont {
     width: 150px;
-    height: 110px;
+    height: 100px;
+    margin-top: 10px;
     padding: 5px 5px; 
   }
   .img_cont img {
@@ -100,6 +101,9 @@
   .details {
     height: 100px;
     margin-top: 1%;
+  }
+  .txt {
+    font-size: 17px;
   }
   .live {
     padding: 0;
