--- a/src/Layout/Banner/style/banner.module.css
+++ b/src/Layout/Banner/style/banner.module.css
@@ -26,7 +26,7 @@
 }
 .contestants {
   padding-bottom: 8%;
-  width: 190px;
+  width: 100%;
   height: 88px;
 }
 .bookings {
