--- a/src/Layout/Header/style/header.module.css
+++ b/src/Layout/Header/style/header.module.css
@@ -112,22 +112,22 @@
     display: none;
   }
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   .sky img {
-    margin: 24px 20px;
+    margin-left: -2%;
     height: 30px;
   }
 }
 @media only screen and (max-width: 768px) {
+  .sky img {
+    margin-left: -1% !important;
+    padding-left: 96px;
+  }
   .header {
     height: 80px;
   }
   .bottom_nav {
     visibility: hidden;
-  }
-  .sky img {
-    margin: 19px 88px !important;
-    height: 38px !important;
   }
   .sports input {
     visibility: hidden;
